# kuka-external-control-sdk

./: .clang-format  .pre-commit-config.yaml  LICENSE.txt  README.md  sonar-project.properties
kuka-external-control-sdk/: CMakeLists.txt  changelog  package.xml
kuka-external-control-sdk-examples/: CMakeLists.txt
kuka-external-control-sdk-examples/include/event-handlers/: control_event_handler.hpp
kuka-external-control-sdk-examples/src/: control_example.cc  monitoring_example.cc
kuka-external-control-sdk/cmake/: kuka-external-control-sdkConfig.cmake
kuka-external-control-sdk/common/src/: operation_status.cc
kuka-external-control-sdk/doc/: Raw_proto_mapping.md  SDK_howto.md  Setup.md
kuka-external-control-sdk/doc/diagrams/: control_example.puml
kuka-external-control-sdk/iiqka/proto-api/motion-external/: control_attributes.proto  control_signal_internal.proto  control_signal_proxy.proto  external_control_mode.proto  motion_state_internal.proto  utils.proto
kuka-external-control-sdk/iiqka/proto-api/motion-services-ecs/: control_signal_external.proto  external_header.proto  motion_services_ecs.proto  motion_state_external.proto  qos_profile_settings.proto
kuka-external-control-sdk/iiqka/src/: robot.cc
kuka-external-control-sdk/iiqka/src/utils/os-core-udp-communication/: replier.cc  secure_replier.cc  secure_socket.cc  socket.cc  subscriber.cc
kuka-external-control-sdk/iiqka/test/: test_robot.cc
kuka-external-control-sdk/iiqka/test/test-assets/: fake_command_handling_service.cc  fake_command_handling_service.h
kuka-external-control-sdk/iiqka/test/test-assets/nanopb/: control_attributes.pb.c  control_attributes.pb.h  control_signal_external.pb.c  control_signal_external.pb.h  control_signal_internal.pb.c  control_signal_internal.pb.h  external_control_mode.pb.c  external_control_mode.pb.h  external_header.pb.c  external_header.pb.h  motion_state_external.pb.c  motion_state_external.pb.h  motion_state_internal.pb.c  motion_state_internal.pb.h  pb.h  pb_decode.c  pb_decode.h  pb_encode.c  pb_encode.h  utils.pb.c  utils.pb.h
kuka-external-control-sdk/iiqka/test/test-assets/os-core-udp-communication/: publisher.cc  publisher.h  requester.cc  requester.h
kuka-external-control-sdk/utils/src/os-core-udp-communication/: dissector.cc  replier.cc  secure_socket.cc  socket.cc  tcp_client.cc
kuka_external_control_sdk/: CHANGELOG.rst  CMakeLists.txt  changelog  package.xml
kuka_external_control_sdk/cmake/: FindProtobuf.cmake  kuka-external-control-sdkConfig.cmake
kuka_external_control_sdk/common/src/: status.cc
kuka_external_control_sdk/doc/: Raw_proto_mapping.md  SDK_howto.md  Setup.md  iiqka_implementation.md  iiqka_os2_setup.md  iiqka_setup.md  kss_eki_rsi_setup.md  kss_eki_setup.md  kss_implementation.md  kss_setup.md  setup.md
kuka_external_control_sdk/doc/diagrams/: control_example.puml  control_example_with_protos.puml  monitoring_example.puml  monitoring_example_with_protos.puml
kuka_external_control_sdk/iiqka/: CMakeLists.txt
kuka_external_control_sdk/iiqka/cmake/: FindProtobuf.cmake  kuka-iiqka-client-libraryConfig.cmake
kuka_external_control_sdk/iiqka/proto-api/motion-external/: control_attributes.proto  control_signal_internal.proto  control_signal_proxy.proto  external_control_mode.proto  motion_state_internal.proto  utils.proto
kuka_external_control_sdk/iiqka/proto-api/motion-services-ecs/: control_signal_external.proto  external_header.proto  motion_services_ecs.proto  motion_state_external.proto  qos_profile_settings.proto  signal_config_external.proto  signal_value_external.proto
kuka_external_control_sdk/iiqka/src/: robot.cc
kuka_external_control_sdk/iiqka/test/: test_message_builder.cc  test_robot.cc
kuka_external_control_sdk/iiqka/test/test-assets/: fake_command_handling_service.cc  fake_command_handling_service.h
kuka_external_control_sdk/iiqka_os2/krl/SensorInterface/: ros_rsi.src  rsi_gpio_example.src  rsi_gpio_joint_pos.rsix  rsi_helper.src  rsi_joint_pos.rsix  rsi_joint_pos.src
kuka_external_control_sdk/krc_setup/iiqka_os2/EthernetKRL/Ethernet configuration/: EkiKSSinterface.xml
kuka_external_control_sdk/krc_setup/iiqka_os2/Program/EKIServer/: command_handler.src  driver.src  eki_communication.src  mappings.src  program_handler.src  status.src
kuka_external_control_sdk/krc_setup/iiqka_os2/Program/EKIserver/: command_handler.src  eki_communication.src  program_handler.src
kuka_external_control_sdk/krc_setup/iiqka_os2/Program/RSI/: rsi_ext_axis_example.src  rsi_gpio_example.src  rsi_helper.src  rsi_joint_pos.src
kuka_external_control_sdk/krc_setup/iiqka_os2/TP/mxA file manipulations/: mxa_techfunc.txt  (+3 more)
kuka_external_control_sdk/kss/: CMakeLists.txt
kuka_external_control_sdk/kss/cmake/: Findtinyxml2.cmake  kuka-kss-client-libraryConfig.cmake
kuka_external_control_sdk/kss/krl/EthernetKRL/: EkiKSSinterface.xml
kuka_external_control_sdk/kss/krl/SensorInterface/: rsi_ethernet.xml  rsi_gpio_ethernet.xml  rsi_gpio_joint_pos.rsix  rsi_joint_pos.rsix
kuka_external_control_sdk/kss/src/: message_builder.cc  robot.cc
kuka_external_control_sdk/kss/src/eki/: client.cc  init_sequence.cc  robot_interface.cc
kuka_external_control_sdk/kss/src/eki-rsi/: eki_comm_client.cc  rsi_comm_endpoint.cc
kuka_external_control_sdk/kss/src/mxa/: client.cc  robot_interface.cc
kuka_external_control_sdk/kss/src/rsi/: endpoint.cc  robot_interface.cc
kuka_external_control_sdk/kss/test/: test_eki_communication.cc  test_message_builder.cc  test_robot.cc
kuka_external_control_sdk/utils/src/os-core-udp-communication/: dissector.cc  publisher.cc  replier.cc  requester.cc  secure_replier.cc  secure_socket.cc  socket.cc  subscriber.cc  tcp_client.cc
kuka_external_control_sdk_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
kuka_external_control_sdk_examples/include/event-handlers/: control_event_handler.hpp  eki_event_handler.hpp  kss_event_handler.hpp  mxa_event_handler.hpp
kuka_external_control_sdk_examples/src/: control_example.cc  eki_rsi_example.cc  monitoring_example.cc  multi_rsi_robot_example.cc  mxa_rsi_example.cc
(+131 files in other folders)
