<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_external_control_sdk</name>
  <version>1.2.1</version>
  <description>Client library for KUKA external control interfaces</description>
  <maintainer email="kovacsge.work@gmail.com">Gergely Kovacs</maintainer>
  <maintainer email="szitanics@gmail.com">Mark Szitanics</maintainer>
  <maintainer email="svastits1@gmail.com">Aron Svastits</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>libgrpc</depend>

  <exec_depend>ament_cmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
