<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_external_control_sdk_examples</name>
  <version>1.4.0</version>
  <description>Examples for using KUKA external control SDK</description>
  <maintainer email="kovacsge.work@gmail.com">Gergely Kovacs</maintainer>
  <maintainer email="sanyi.komaromi@gmail.com">Sandor Komaromi</maintainer>
  <maintainer email="pasztor.kristof.kp@gmail.com">Kristof Matyas Pasztor</maintainer>
  <maintainer email="pepo.tamas@gmail.com">Tamas Pepo</maintainer>
  <maintainer email="svastits1@gmail.com">Aron Svastits</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>kuka_external_control_sdk</depend>

  <exec_depend>ament_cmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
